# python_transaction_api

./: .gitignore  README.md  pyproject.toml  requirements.txt
tests/: api_test.py  conftest.py  event_handler_test.py
transaction_challenge/: app.py  main.py
transaction_challenge/api/: api.py
transaction_challenge/domain/dto/: clientTransactionDto.py  eventResponseDto.py
transaction_challenge/domain/service/: CheckEvents.py  Event_handler.py  checkBase.py
